--- a/home/index.html
+++ b/home/index.html
@@ -29,9 +29,9 @@
                         <img src="http://t.cn/RCzsdCq" class="layui-nav-img">个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="javascript:;" id="logout"><span class="iconfont icon-tuichu
@@ -68,14 +68,14 @@
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
                             <dd>
-                                <a href="javascript:;"> <i class="layui-icon layui-icon-app"></i>基本资料</a>
+                                <a href="/user/user_info.html" target="fm"> <i class="layui-icon layui-icon-app"></i>基本资料</a>
                             </dd>
                             <dd>
-                                <a href="javascript:;"> <i class="layui-icon layui-icon-app"></i>更换头像</a>
+                                <a href="/user/user_avatar.html" target="fm"> <i class="layui-icon layui-icon-app"></i>更换头像</a>
                             </dd>
                             <dd>
 
-                                <a href="javascript:;"> <i class="layui-icon layui-icon-app"></i>重置密码</a>
+                                <a href="/user/user_pwd.html" target="fm"> <i class="layui-icon layui-icon-app"></i>重置密码</a>
                             </dd>
                         </dl>
                     </li>
@@ -86,7 +86,7 @@
 
         <div class="layui-body">
             <!-- 内容主体区域 -->
-            <iframe src="/home/dashboard.html" name='fm' frameborder="0"></iframe>
+            <iframe src="/user/user_avatar.html" name='fm' frameborder="0"></iframe>
         </div>
 
         <div class="layui-footer">
